fixed a bug- z-index of svg was too high

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,13 +20,16 @@
   .rows .col-1-of-3 {
     width: calc((100% - 2 *2rem) / 3); }
   .rows .col-2-of-3 {
-    width: calc( 2 * (100% - 2 *2rem) / 3 + 2rem); }
+    width: calc(
+ 2 * (100% - 2 *2rem) / 3 + 2rem); }
   .rows .col-1-of-4 {
     width: calc((100% - 3 *2rem) / 4); }
   .rows .col-2-of-4 {
-    width: calc( 2 * (100% - 3 *2rem) / 3 + 2rem); }
+    width: calc(
+ 2 * (100% - 3 *2rem) / 3 + 2rem); }
   .rows .col-3-of-4 {
-    width: calc( 3 * (100% - 3 *2rem) / 3 + 2 *2rem); }
+    width: calc(
+ 3 * (100% - 3 *2rem) / 3 + 2 *2rem); }
 
 .navigation {
   position: fixed;
@@ -896,7 +899,7 @@
   left: 15%;
   width: 30%;
   transform: translate(-50%, -50%);
-  z-index: 10000; }
+  z-index: 800; }
   @media (max-aspect-ratio: 1 / 1) {
     .svg-anim {
       top: 75%;
