--- a/sass/components/_svg-anim.scss
+++ b/sass/components/_svg-anim.scss
@@ -4,7 +4,7 @@
     left: 15%;
     width: 30%;
     transform: translate(-50%, -50%);
-    z-index: 10000;
+    z-index: 800;
 
     @media (max-aspect-ratio: 1/1) {
         top: 75%;
